# weirdo-collector

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  testing.yml
tests/: test_weirdo_collector.py
weirdo_collector/: __main__.py  app.py  cli.py  collector.py  logging.py
